# dot-files

./: .bash_profile  .bashrc  .gitignore  .tmux.conf  .vimrc  README.md  config  randomStarshipConfig.toml  starship.toml
bootstrap/: README.md  aur.txt  install.sh  packages.txt
cava/: config
clock-map/: Cargo.toml
clock-map/src/: main.rs
dunst/: dunstrc
gsimplecal/: config
gtk-3.0/: settings.ini
gtk-4.0/: gtk.css  settings.ini
gtk/Gruvbox-gsimplecal/gtk-3.0/: gtk.css
hypr/: host.desktop.conf  host.laptop.conf  hyprland.conf  hyprpaper.conf  popup-dismiss
hypr/scripts/: nohup.out  volume_hack.sh
kitty/: current-theme.conf  kitty.conf  kitty.conf.bak
kitty/themes/: miasma-kitty.conf
local/share/icons/SilverXMod/: README  cursor.theme  index.theme
nvim/: CLAUDE.md  init.lua  lazy-lock.json
nvim/lua/: vim-options.lua
nvim/lua/config/: lazy.lua
nvim/lua/plugins/: auto-session.lua  avante.lua  completions.lua  dev-icons.lua  flash.lua  gitsigns.lua  indents.lua  lazy-git.lua  lsp-config.lua  lualine.lua  markdown.lua  miasma.lua  neoscroll.lua  neotree.lua  noice.lua  none-ls.lua  nvim-pywal.lua  sleuth.lua  tags.lua  telescope.lua  todo-comments.lua  treesitter.lua  ufo.lua  yazi-nvim.lua
scripts/: hide-steam-entries.sh
waybar/: audio-menu-watch.sh  audio-output.sh  config  config.desktop.jsonc  config.jsonc  config.laptop.jsonc  gen-audio-menu.sh  launch.sh  osd.sh  style-main.css  style.css  volume.sh
wireplumber/wireplumber.conf.d/: 51-motu-m4.conf
wofi/: config  style-wallpaper.css  style.css
yazi/: keymap.toml  yazi.toml
(+3 files in other folders)
