[package]
name = "clock-map"
version = "0.1.0"
edition = "2021"
description = "Floating ratatui popup: a US map with the current time in each timezone. Bound to the waybar clock pill."

[dependencies]
ratatui = "0.29"
chrono = "0.4"
chrono-tz = "0.10"
serde_json = "1"

[profile.release]
strip = true
